--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html>
 <head>
 <title>Hello World</title>
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <span>Just simple page!</span>
+
+<script src="main.js">
+
+</script>
 </body>
 </html>
