Add a image, video and icons

--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="ar">
 <head>
+    <meta charset="UTF-8">
 <title>Hello World</title>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="icon" href="view/icon/C4N.ico">
+<link rel="stylesheet" type="text/css" href="view/css/styleDef.css">
+
 </head>
 <body>
-<span>Just simple page!</span>
+    <header>
+        <nav>
+            <table>
+                <tr>الاول</tr>
+                <tr>الثاني</tr>
+                <tr>الثالث</tr>
+                <tr>الرابع</tr>
+                <tr>الخامس</tr>
+            </table>
+        </nav>
+        
+    </header>
 
-<script src="main.js">
+<span>مثال بسيط</span>
+
+
+
+
+
+
+<script src="view/js/main.js">
 
 </script>
 </body>
