add font from google and remove font dir, add pictuer, add readme

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 </head>
 <body>
     <header>
+        <section class="titleSite">
+        <img src="img/C4N.png" height="120px" width="120px" />
+        <span class="describSite"></span>
+        </section>
         <nav>
-            <table>
-                <tr>الاول</tr>
-                <tr>الثاني</tr>
-                <tr>الثالث</tr>
-                <tr>الرابع</tr>
-                <tr>الخامس</tr>
-            </table>
+            <a href="index.html" class="rem"><span class="LSiteButton">الرئيسية</span></a>
+            <span class="|">|</span>
+            <a href="jsproj.html" class="rem"><span class="LSiteButton">مشاريع جافا سكريبت</span></a>
+            <span class="|">|</span>
+            <a href="froproj.html" class="rem"><span class="LSiteButton">مشاريع التصميم</span></a>
+            <span class="|">|</span>
+            <a href="bakproj.html" class="rem"><span class="LSiteButton">مشاريع الواجهة الخلفية</span></a>
+            <span class="|">|</span>
+            <a href="aboutus.html" class="rem"><span class="LSiteButton">عنّا</span></a>
         </nav>
         
     </header>
 
-<span>مثال بسيط</span>
-
+    <section>
+        
+    </section>
 
 
 
