Add neew logo, image, edit the some folder, writing the index page.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
 <title>Hello World</title>
-<link rel="icon" href="view/icon/C4N.ico">
+<link rel="icon" href="view/img/icon/c4n.ico">
 <link rel="stylesheet" type="text/css" href="view/css/styleDef.css">
 
 </head>
 <body>
     <header>
-        <section class="titleSite">
-        <img src="img/C4N.png" height="120px" width="120px" />
+        <div class="titleSite" >
+        <img src="view/img/logo/c4n.svg" class="logoSite" alt="Logo website"/>
         <span class="describSite"></span>
-        </section>
+        </div>
         <nav>
             <a href="index.html" class="rem"><span class="LSiteButton">الرئيسية</span></a>
             <span class="|">|</span>
@@ -33,7 +33,9 @@
 
 
 
+    <footer>
 
+    </footer>
 
 <script src="view/js/main.js">
 
