add a folder for MVC system and edit other folders.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <nav>
             <a href="index.html" class="rem"><span class="LSiteButton">الرئيسية</span></a>
             <span class="|">|</span>
-            <a href="jsproj.html" class="rem"><span class="LSiteButton">مشاريع جافا سكريبت</span></a>
+            <a href="Projects/jsproj.html" class="rem"><span class="LSiteButton">مشاريع جافا سكريبت</span></a>
             <span class="|">|</span>
-            <a href="froproj.html" class="rem"><span class="LSiteButton">مشاريع التصميم</span></a>
+            <a href="Projects/froproj.html" class="rem"><span class="LSiteButton">مشاريع التصميم</span></a>
             <span class="|">|</span>
-            <a href="bakproj.html" class="rem"><span class="LSiteButton">مشاريع الواجهة الخلفية</span></a>
+            <a href="Projects/bakproj.html" class="rem"><span class="LSiteButton">مشاريع الواجهة الخلفية</span></a>
             <span class="|">|</span>
             <a href="aboutus.html" class="rem"><span class="LSiteButton">عنّا</span></a>
         </nav>
