New update on index page

--- a/index.html
+++ b/index.html
@@ -9,10 +9,21 @@
 </head>
 <body>
     <header>
-        <div class="titleSite" >
-        <img src="view/img/logo/c4n.svg" class="logoSite" alt="Logo website"/>
-        <span class="describSite"></span>
-        </div>
+        <a href="index.html" class="rem">
+            <div class="titleSite" >
+                <div id="imageLogo">
+                    <img src="view/img/logo/c4n.svg" class="logoSite" alt="Logo website"/>
+                </div>
+                <div id="td">
+                    <span class="siteName">البرمجة للنجف</span>
+                    <span class="describSite">لغة المستقبل، نسيرها لخدمة المجتمع!</span>
+                </div>
+                <div id="git">
+                    <a href="#" target="_blank"><img src="view/img/logo/git.png" class="git" title="Script on Git"></a>
+                    <a href="https://goo.gl/P2c2FX" target="_blank"><img src="view/img/logo/github.svg" class="github" title="Script on GitHub"></a>
+                </div>
+            </div>
+        </a>
         <nav>
             <a href="index.html" class="rem"><span class="LSiteButton">الرئيسية</span></a>
             <span class="|">|</span>
@@ -28,7 +39,14 @@
     </header>
 
     <section>
-        
+        <div align="center">
+            <span id="1111" style="background-color:aqua;font-size:20pt;cursor:pointer;">1111</span>
+            <span id="2222" style="background-color:aquamarine;font-size:20pt;cursor:pointer;">2222</span>
+        </div>
+        <div id="onit">
+
+        </div>
+
     </section>
 
 
