New update in index.hmtl page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <a href="index.html" class="rem">
             <div class="titleSite" >
+              <div id="imgtitle">
                 <div id="imageLogo">
                     <img src="view/img/logo/c4n.svg" class="logoSite" alt="Logo website"/>
                 </div>
@@ -18,6 +19,7 @@
                     <span class="siteName">البرمجة للنجف</span>
                     <span class="describSite">لغة المستقبل، نسيرها لخدمة المجتمع!</span>
                 </div>
+              </div>
                 <div id="git">
                     <a href="#" target="_blank"><img src="view/img/logo/git.png" class="git" title="Script on Git"></a>
                     <a href="https://goo.gl/P2c2FX" target="_blank"><img src="view/img/logo/github.svg" class="github" title="Script on GitHub"></a>
@@ -35,7 +37,15 @@
             <span class="|">|</span>
             <a href="aboutus.html" class="rem"><span class="LSiteButton">عنّا</span></a>
         </nav>
-        
+        <section id="siteBranch" align="center">
+            <h2>اقسام الموقع</h2>
+            <input type="radio" name="siteBranch" class="siteBranchR" value="الرئيسية" >
+            <input type="radio" name="siteBranch" class="siteBranchR" value="الواجهة الامامية">
+            <input type="radio" name="siteBranch" class="siteBranchR" value="الواجهة الخفية"> 
+            <input type="radio" name="siteBranch" class="siteBranchR" value="ابداعات الاعضاء">
+            <input type="radio" name="siteBranch" class="siteBranchR" value="عنا">
+            <input type="radio" name="siteBranch" class="siteBranchR" value="اقتراحات">
+        </section>
     </header>
 
     <section>
@@ -60,3 +70,4 @@
 </script>
 </body>
 </html>
+
