Edit in index.html page

--- a/index.html
+++ b/index.html
@@ -3,29 +3,51 @@
 <head>
     <meta charset="UTF-8">
 <title>Hello World</title>
-<link rel="icon" href="view/img/icon/c4n.ico">
-<link rel="stylesheet" type="text/css" href="view/css/styleDef.css">
+<link rel="icon" href="View/img/icon/c4n.ico">
+<link rel="stylesheet" type="text/css" href="View/css/styleDef.css">
 
 </head>
 <body>
     <header>
         <a href="index.html" class="rem">
+            
             <div class="titleSite" >
               <div id="imgtitle">
                 <div id="imageLogo">
-                    <img src="view/img/logo/c4n.svg" class="logoSite" alt="Logo website"/>
+                    <img src="View/img/logo/c4n.svg" class="logoSite" alt="Logo website"/>
                 </div>
                 <div id="td">
                     <span class="siteName">البرمجة للنجف</span>
                     <span class="describSite">لغة المستقبل، نسيرها لخدمة المجتمع!</span>
                 </div>
               </div>
-                <div id="git">
-                    <a href="#" target="_blank"><img src="view/img/logo/git.png" class="git" title="Script on Git"></a>
-                    <a href="https://goo.gl/P2c2FX" target="_blank"><img src="view/img/logo/github.svg" class="github" title="Script on GitHub"></a>
+    
+                <div id="ourTch">
+                   <a href="#FaceBook" class="rem" target="_blank">
+                        <div id="facebook" class="logoLink"></div>
+                    </a>
+                    <a href="#Twitter" class="rem" target="_blank">
+                        <div id="twitter"  class="logoLink"></div>
+                    </a>
+                    <a href="#GitHub" class="rem" target="_blank">
+                        <div id="github"   class="logoLink"></div>
+                    </a>
+                    <a href="#" class="rem" target="_blank">
+                        <div id="github"   class="logoLink"></div>
+                    </a>
+                    <a href="#GitHub" class="rem" target="_blank">
+                        <div id="github"   class="logoLink"></div>
+                    </a>
+                    <a href="https://goo.gl/P2c2FX" class="rem" target="_blank">
+                        <div id="github"   class="logoLink"></div>
+                    </a>
+                    <a href="#7" class="rem" target="_blank">
+                        <div id="github"   class="logoLink"></div>
+                    </a>
                 </div>
             </div>
         </a>
+
         <nav>
             <a href="index.html" class="rem"><span class="LSiteButton">الرئيسية</span></a>
             <span class="|">|</span>
@@ -37,7 +59,7 @@
             <span class="|">|</span>
             <a href="aboutus.html" class="rem"><span class="LSiteButton">عنّا</span></a>
         </nav>
-        <section id="siteBranch" align="center">
+        <section id="siteBranch">
             <h2>اقسام الموقع</h2>
             <input type="radio" name="siteBranch" class="siteBranchR" value="الرئيسية" >
             <input type="radio" name="siteBranch" class="siteBranchR" value="الواجهة الامامية">
@@ -49,7 +71,7 @@
     </header>
 
     <section>
-        <div align="center">
+
             <span id="1111" style="background-color:aqua;font-size:20pt;cursor:pointer;">1111</span>
             <span id="2222" style="background-color:aquamarine;font-size:20pt;cursor:pointer;">2222</span>
         </div>
@@ -65,7 +87,7 @@
 
     </footer>
 
-<script src="view/js/main.js">
+<script src="View/js/main.js">
 
 </script>
 </body>
