Fixed a problem in index page

--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
               </div>
     
                 <div id="ourTch">
-                   <a href="#FaceBook" class="rem" target="_blank">
-                        <div id="facebook" class="logoLink"></div>
+                    <a href="#GitHub" class="rem" target="_blank">
+                        <div id="github"   class="logoLink"></div>
+                    </a>
+                    <a href="#Youtube" class="rem" target="_blank">
+                        <div id="youtube"   class="logoLink"></div>
+                    </a>
+                    <a href="#Pinterest" class="rem" target="_blank">
+                        <div id="pinterest"   class="logoLink"></div>
+                    </a>
+                    <a href="#Linkedin" class="rem" target="_blank">
+                        <div id="linkedin"   class="logoLink"></div>
+                    </a>
+                    <a href="#GooglePlus" class="rem" target="_blank">
+                        <div id="googleplus"   class="logoLink"></div>
                     </a>
                     <a href="#Twitter" class="rem" target="_blank">
                         <div id="twitter"  class="logoLink"></div>
                     </a>
-                    <a href="#GitHub" class="rem" target="_blank">
-                        <div id="github"   class="logoLink"></div>
-                    </a>
-                    <a href="#" class="rem" target="_blank">
-                        <div id="github"   class="logoLink"></div>
-                    </a>
-                    <a href="#GitHub" class="rem" target="_blank">
-                        <div id="github"   class="logoLink"></div>
-                    </a>
-                    <a href="https://goo.gl/P2c2FX" class="rem" target="_blank">
-                        <div id="github"   class="logoLink"></div>
-                    </a>
-                    <a href="#7" class="rem" target="_blank">
-                        <div id="github"   class="logoLink"></div>
+                    <a href="#FaceBook" class="rem" target="_blank">
+                        <div id="facebook" class="logoLink"></div>
                     </a>
                 </div>
             </div>
