--- a/test.htm
+++ b/test.htm
@@ -32,7 +32,7 @@
 
             }
 
-            div#facebook{ z-index: 2;
+            div#facebook{
                 background-image: url(View/img/logo/black/Facebook.svg);
             }
             div#facebook:hover{
