Edit Index Page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <link rel="icon" href="View/img/icon/c4n.ico">
     <!-- [Style All] -->
     <link rel="stylesheet" type="text/css" href="View/css/styleDef.css">
-    <!-- [Style Section] -->
-    <link rel="stylesheet" type="text/css" href="View/css/styleSection.css">
-
     <meta name="viewport" content="width=device-width, initial-scala=1.0">
 </head>
 <body>
@@ -57,13 +54,13 @@
             <span class="LSiteButton">رابط صفحة</span>
             </a>
             <span class="|">|</span>
-            <a href="#Page1" class="rem"><span class="LSiteButton">رابط صفحة</span></a>
+            <a href="index.html" class="rem"><span class="LSiteButton">الرئيسة</span></a>
             <span class="|">|</span>
-            <a href="#Page2" class="rem"><span class="LSiteButton">رابط صفحة</span></a>
+            <a href="page/joinus.html" class="rem"><span class="LSiteButton">أدخل مجتمعنا</span></a>
             <span class="|">|</span>
-            <a href="#Page3" class="rem"><span class="LSiteButton">رابط صفحة</span></a>
+            <a href="page/shareidea.html" class="rem"><span class="LSiteButton">اقترح مشروعاً</span></a>
             <span class="|">|</span>
-            <a href="#page4" class="rem"><span class="LSiteButton">رابط صفحة</span></a>
+            <a href="page/aboutus.html" class="rem"><span class="LSiteButton">عنّا</span></a>
         </nav>
         <section id="signPeople">
             <div id="login" class="sign">
@@ -104,109 +101,36 @@
     </header>
 
     <section>
-
-        <article id="slides">
-
-            <section id="1slide" class="txsl">
-                <span class="title">المجانية والمشاركة!</span>
-                <span class="describ">
+        <article id="showPort">
+                <div class="describThing">
+                    <img src="View/img/logo/webDecrib/share.svg">
+                    <span class="title"> المجانية والمشاركة!</span>
+                    <span class="describ">
+                        ترى اعضاء فريقنا كالاخوة، فكل شخص
+                        يساعد الاخر ويتشارك الافكار معه لبناء مجتمع قوي
+                        يعمل على نشر الافكار الابداعية وبناء تطبيقات قوية.            
+                    </span>
+                </div>
+                <div class="describThing">
+                    <img src="View/img/logo/webDecrib/gruopPeople.svg">
+                    <span class="title"> العمل الجماعي!</span>
+                    <span class="describ">
                         جميع تطبيقاتنا هي تطبيقات مجانية
                         تتميز بإتاحتها للجميع مع شيفرتها المصدرية،
                         يمكنك عرفة جميع تطبيقاتنا او تنزيل الشيفرة المصدرية من الرابط ادناه.   
                     </span>
-                    <a href="#GitHub" class="rem"><span class="myButton">Source Code in GitHub</span></a>
-            </section>
-            <section id="2slide" class="txsl">
-                <span class="title">العمل الجماعي وتبادل الافكار!</span>
-                <span class="describ">
-                    ترى اعضاء فريقنا كالاخوة، فكل شخص
-                    يساعد الاخر ويتشارك الافكار معه لبناء مجتمع قوي
-                    يعمل على نشر الافكار الابداعية وبناء تطبيقات قوية.
-                </span>
-                <a href="page/joinus.html" class="rem"><span class="myButton">Join Us</span></a>
-            </section>
-            <section id="3slide" class="txsl">
-                <span class="title">العمل الجماعي وتبادل الافكار!</span>
-                <span class="describ">
-                    لديك افكار لكن لاتعرف كيف تترجمها للغات برمجية؟
-                    تحب ان تحقق حلمك وتساعد على بناء تطبيقات برمجية؟
-                    اذاً اليك الحل شارك الفكرة معنا ونحن نساعد على بناء تلك الفكرة لتطبيقات برمجية تفيد المجتمع،
-                    والفكرك تبقى لك..
-                </span>
-                <a href="page/shareidea.html" class="rem"><span class="myButton">Share Your Idea</span></a>
-        </section>
+                </div>
+                <div class="describThing">
+                    <img src="View/img/logo/webDecrib/idea.svg">
+                    <span class="title">تبادل الافكار!</span>
+                    <span class="describ">
+                        لديك افكار لكن لاتعرف كيف تترجمها للغات برمجية؟
+                        تحب ان تحقق حلمك وتساعد على بناء تطبيقات برمجية؟
+                        اذاً شارك الفكرة معنا ونحن نساعد على بناء تلك الفكرة لتطبيقات برمجية تفيد المجتمع،
+                        والفكرك تبقى لك..
+                    </span>
+                </div>        
         </article>
-
-        <article id="thing">
-            <div id="showPort">
-                <div class="describThing">
-                    <img src="View/img/logo/webDecrib/idea.svg">
-                    <span class="title"> عنوان بسيط </span>
-                    <span class="describ">
-                        هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                        الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح. 
-                        هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                        الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح.
-                    </span>
-                </div>
-                <div class="describThing">
-                    <img src="View/img/logo/webDecrib/idea.svg">
-                    <span class="title"> عنوان بسيط </span>
-                    <span class="describ">
-                        هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                        الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح. 
-                        هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                        الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح.
-                    </span>
-                </div>
-                <div class="describThing">
-                    <img src="View/img/logo/webDecrib/idea.svg">
-                    <span class="title"> عنوان بسيط </span>
-                    <span class="describ">
-                        هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                        الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح. 
-                        هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                        الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح.
-                    </span>
-                </div>
-                
-            </div>
-        </article>
-        <article id="thing">
-                <div id="showPort">
-                    <div class="describThing">
-                        <img src="View/img/logo/webDecrib/idea.svg">
-                        <span class="title"> عنوان بسيط </span>
-                        <span class="describ">
-                            هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                            الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح. 
-                            هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                            الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح.
-                        </span>
-                    </div>
-                    <div class="describThing">
-                        <img src="View/img/logo/webDecrib/idea.svg">
-                        <span class="title"> عنوان بسيط </span>
-                        <span class="describ">
-                            هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                            الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح. 
-                            هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                            الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح.
-                        </span>
-                    </div>
-                    <div class="describThing">
-                        <img src="View/img/logo/webDecrib/idea.svg">
-                        <span class="title"> عنوان بسيط </span>
-                        <span class="describ">
-                            هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                            الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح. 
-                            هنا نص بسيط يكتب لشرح جزء معين او خصيصة معينة،
-                            الغرض هنا الشرح، الغرض هنا الشرح، الغرض هنا الشرح.
-                        </span>
-                    </div>
-                    
-                </div>
-            </article>
     </section>
 
 
