Edit Project page and index page Page

--- a/index.html
+++ b/index.html
@@ -50,15 +50,13 @@
         </a>
 
         <nav id="branchSite">
-            <a href="#PageIndex" class="rem">
-            <span class="LSiteButton">رابط صفحة</span>
-            </a>
-            <span class="|">|</span>
             <a href="index.html" class="rem"><span class="LSiteButton">الرئيسة</span></a>
             <span class="|">|</span>
             <a href="page/joinus.html" class="rem"><span class="LSiteButton">أدخل مجتمعنا</span></a>
             <span class="|">|</span>
             <a href="page/shareidea.html" class="rem"><span class="LSiteButton">اقترح مشروعاً</span></a>
+            <span class="|">|</span>
+            <a href="page/ourprojects.html" class="rem"><span class="LSiteButton">مشاريعنا</span></a>
             <span class="|">|</span>
             <a href="page/aboutus.html" class="rem"><span class="LSiteButton">عنّا</span></a>
         </nav>
