Edit Finish All Page Just About Us

--- a/index.html
+++ b/index.html
@@ -119,6 +119,35 @@
                     </span>
                 </div>
                 <div class="describThing">
+                    <img src="View/img/logo/webDecrib/stopwatch.svg">
+                    <span class="title">السرعة والفعالية!</span>
+                    <span class="describ">
+                        يتمتع اغلب اعضائنا بمهنية عالية، فقد خضعوا لتدريب مكتثف
+                        يعمل على رفع قدراتهم ومهاراتهم، فلا تقلق حين ايداعك اينا علملاً...
+                    </span>
+                </div>        
+        </article>
+        <article id="showPort">
+                <div class="describThing">
+                    <img src="View/img/logo/webDecrib/24hour.svg">
+                    <span class="title">التوافر!</span>
+                    <span class="describ">
+                        يمكنك الاتصال بنا على مدار الساعة، ولا تقلق سنقوم بالرد عليك بأقل
+                        من 24 ساعة!!
+                        <br>
+                        نضمن لك ذلك...           
+                    </span>
+                </div>
+                <div class="describThing">
+                    <img src="View/img/logo/webDecrib/plus.svg">
+                    <span class="title">القبول!</span>
+                    <span class="describ">
+                        نحن نقبل جميع الاعضاء الجدد، حتى غير التعلمين!
+                        <br>
+                        سنعمل على تعليمهم من قبل استاذة ذوي خبرة، المهم ان يكون الهدف انسانياً...
+                    </span>
+                </div>
+                <div class="describThing">
                     <img src="View/img/logo/webDecrib/idea.svg">
                     <span class="title">تبادل الافكار!</span>
                     <span class="describ">
