Edit Finish All Page Just About Us

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar">
 <head>
     <meta charset="UTF-8">
-    <title>WEBSITE NANE</title>
+    <title>WEBSITE NAME</title>
     <link rel="icon" href="View/img/icon/c4n.ico">
     <!-- [Style All] -->
     <link rel="stylesheet" type="text/css" href="View/css/styleDef.css">
@@ -104,18 +104,19 @@
                     <img src="View/img/logo/webDecrib/share.svg">
                     <span class="title"> المجانية والمشاركة!</span>
                     <span class="describ">
-                        ترى اعضاء فريقنا كالاخوة، فكل شخص
-                        يساعد الاخر ويتشارك الافكار معه لبناء مجتمع قوي
-                        يعمل على نشر الافكار الابداعية وبناء تطبيقات قوية.            
+                        جميع تطبيقاتنا هي تطبيقات مجانية
+                        تتميز بإتاحتها للجميع مع شيفرتها المصدرية،
+                        يمكنك عرفة جميع تطبيقاتنا او تنزيل الشيفرة المصدرية من الرابط ادناه.   
                     </span>
                 </div>
                 <div class="describThing">
                     <img src="View/img/logo/webDecrib/gruopPeople.svg">
                     <span class="title"> العمل الجماعي!</span>
                     <span class="describ">
-                        جميع تطبيقاتنا هي تطبيقات مجانية
-                        تتميز بإتاحتها للجميع مع شيفرتها المصدرية،
-                        يمكنك عرفة جميع تطبيقاتنا او تنزيل الشيفرة المصدرية من الرابط ادناه.   
+                        ترى اعضاء فريقنا كالاخوة، فكل شخص
+                        يساعد الاخر ويتشارك الافكار معه لبناء مجتمع قوي
+                        يعمل على نشر الافكار الابداعية وبناء تطبيقات قوية.   
+
                     </span>
                 </div>
                 <div class="describThing">
@@ -123,7 +124,7 @@
                     <span class="title">السرعة والفعالية!</span>
                     <span class="describ">
                         يتمتع اغلب اعضائنا بمهنية عالية، فقد خضعوا لتدريب مكتثف
-                        يعمل على رفع قدراتهم ومهاراتهم، فلا تقلق حين ايداعك اينا علملاً...
+                        يعمل على رفع قدراتهم ومهاراتهم، فلا تقلق حين ايداعك اينا عملاً...
                     </span>
                 </div>        
         </article>
@@ -154,7 +155,7 @@
                         لديك افكار لكن لاتعرف كيف تترجمها للغات برمجية؟
                         تحب ان تحقق حلمك وتساعد على بناء تطبيقات برمجية؟
                         اذاً شارك الفكرة معنا ونحن نساعد على بناء تلك الفكرة لتطبيقات برمجية تفيد المجتمع،
-                        والفكرك تبقى لك..
+                        وحقوقك محفوظة....
                     </span>
                 </div>        
         </article>
